Website for Launch 2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@ title: "#KarthikB"
 <div class="content">
 	<h1>Hello there! Welcome to my website!</h1>
 	<p>My name is Karthik.B and I'm an electronics undergrad </p>
-	<p>Click away <a href="/about/">here</a>,<a href="/articles/">here</a>,<a href="/projects">here</a> and ufff! <a href="/travel/">here</a> to know about me, my articles, projects and travel </p>
-	<p>Have a good day! :-) </p>
+	<p>Navigate to know <a class="btn btn-primary" role="button" href="/about/"> About me</a>,
+	<a class="btn btn-primary" role="button" href="/projects">My Projects</a>
+	<a class="btn btn-primary" role="button" href="/articles/"> My articles</a>,and 
+	<a class="btn btn-primary" role="button" href="/travel/">My travels! </p>
+	<p>Have a good day!!</p>
 </div>
