Website for Launch 2

--- a/about/index.html
+++ b/about/index.html
@@ -23,4 +23,4 @@ My dedication and discipline are my key qualities as is my persistence. I am a t
 </p>
 
 <h3>Looking forward to life! <br />
-Download my resume by clicking<a href="/static/files/resume.pdf">here</a></h3>
+Download my resume by clicking<a href="/static/resume.pdf">here</a></h3>
