--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@ title: "#KarthikB"
 	<p>Navigate to know <a class="btn btn-primary" role="button" href="/about/"> About me</a>,
 	<a class="btn btn-primary" role="button" href="/projects">My Projects</a>
 	<a class="btn btn-primary" role="button" href="/articles/"> My articles</a>,and 
-	<a class="btn btn-primary" role="button" href="/travel/">My travels! </p>
+	<a class="btn btn-primary" role="button" href="/travel/">My travels! </a></p>
 	<p>Have a good day!!</p>
 </div>
