Added Active NavLinks, About Page, Corrected Footer

--- a/about/index.html
+++ b/about/index.html
@@ -2,25 +2,33 @@
 layout: default
 title: "#KarthikB"
 ---
+
+<br/>
+<br/>
+<img src="/static/images/profile.jpg" class="profile img-thumbnail img-circle" />
+<h2 id="caption">Karthik B</h2>
+<br />
+<div class="about">	
 <p>
-I am an Electronics Undergraduate, with a passion for Programming.
+I am an Electronics Undergraduate at SRM Easwari Engineering College, with a passion for Programming.
 </p>
-<p>
+<p >
 I'm inclined towards working with Embedded Systems, Internet of Things and Application Development.
 </p>
+<p >
 My programming skill-set includes C, C++, Python while my web-development tools include HTML,CSS and Bootstrap Framework. I've also worked with Github Version Control, have debugged with Valgrind and GDB. 
 </p>
-<p>
+<p >
 Currently, I'm working on implementation of Machine Learning algorithms and applying them. My further interests include mastering Tensor Flow, working with ROS.
 </p>
 
-<p>
+<p >
 In my free time, I am an avid reader, traveller/trekker, foodie and social volunteer. 
 </p>
 
-<p>
+<p >
 My dedication and discipline are my key qualities as is my persistence. I am a team player with proven experience in working as a team to tackle problems in various instances during my education/internships. I always strive to learn new things and keep progressing. I'm an optimist, greatly influenced by Ayn Rand's writing.
 </p>
 
-<h3>Looking forward to life! <br />
-Download my resume by clicking &nbsp;<a href="/static/resume.pdf">here</a></h3>
+<p >Download my resume by clicking &nbsp;<a id="here" href="/static/resume.pdf">here</a></p>
+</div>
