--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: default
 title: "#KarthikB"
 ---
 <div class="content">
-	<h1>Hello there! Welcome to my website!</h1>
-	<p>My name is Karthik.B and I'm an electronics undergrad </p>
-	<p>Navigate to know <a class="btn btn-primary" role="button" href="/about/"> About me</a>,
+	<h1 id="intro">Hello there! </h1><br />
+	<h3>My name is Karthik.B.
+	Navigate to know <a class="btn btn-primary" role="button" href="/about/"> About me</a>
 	<a class="btn btn-primary" role="button" href="/projects">My Projects</a>
-	<a class="btn btn-primary" role="button" href="/articles/"> My articles</a>,and 
-	<a class="btn btn-primary" role="button" href="/travel/">My travels! </a></p>
-	<p>Have a good day!!</p>
+	<a class="btn btn-primary" role="button" href="/articles/"> My articles</a> and 
+	<a class="btn btn-primary" role="button" href="/travel/">My travels! </a></h3>	
+	<h3>Have a good day!!</h3>
 </div>
