--- a/about/index.html
+++ b/about/index.html
@@ -2,9 +2,7 @@
 layout: default
 title: "#KarthikB"
 ---
-
-<br/>
-<br/>
+<div id="shift-1">
 <img src="/static/images/profile.jpg" class="profile img-thumbnail img-circle" />
 <h2 id="caption">Karthik B</h2>
 <br />
@@ -31,4 +29,5 @@ My dedication and discipline are my key qualities as is my persistence. I am a t
 </p>
 
 <p >Download my resume by clicking &nbsp;<a id="here" href="/static/resume.pdf">here</a></p>
+</div>
 </div>
