--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: default
 title: "#KarthikB"
 ---
-<div class="content">
+<div id="shift-1">
 	<h1 id="intro">Hello there! </h1><br />
-	<h3>My name is Karthik.B.
-	Navigate to know <a class="btn btn-primary" role="button" href="/about/"> About me</a>
-	<a class="btn btn-primary" role="button" href="/projects">My Projects</a>
-	<a class="btn btn-primary" role="button" href="/articles/"> My articles</a> and 
-	<a class="btn btn-primary" role="button" href="/travel/">My travels! </a></h3>	
+	<h3>My name is Karthik Balu.
+	Navigate to know <a class="btn btn-primary" role="button" href="/about/"> <code>< About me></code></a>
+	<a class="btn btn-primary" role="button" href="/projects"><code>< My Projects></code></a>
+	<a class="btn btn-primary" role="button" href="/articles/"><code>< My articles></code></a> and 
+	<a class="btn btn-primary" role="button" href="/travel/"><code>< My travels></code> </a> !</h3>	
 	<h3>Have a good day!!</h3>
 </div>
