--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: "#KarthikB"
 ---
-<div id="shift-2">
+<div class="shift-2">
 <img src="/static/images/profile.jpg" class="profile img-thumbnail img-circle" />
 <h2 id="caption">Karthik B</h2>
 <br />
