--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: "#KarthikB"
 ---
-<div id="shift-2">
+<div class="shift-2">
 	<h1 id="intro">Hello there! </h1><br />
 	<h3>My name is Karthik Balu.
 	Navigate to know <a class="btn btn-primary" role="button" href="/about/"> <code>< About me ></code></a>
