--- a/travel/index.html
+++ b/travel/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: "#TravelBug"
 ---
-<div id="shift-2">
+<div class="shift-2">
   <h1>{{ page.title }}</h1>
   <ul class="list-unstyled">
 
