--- a/about/index.html
+++ b/about/index.html
@@ -2,11 +2,11 @@
 layout: default
 title: "#KarthikB"
 ---
-<div class="shift-2">
+<div class="shift">
 <img src="/static/images/profile.jpg" class="profile img-thumbnail img-circle" />
 <h2 id="caption">Karthik B</h2>
 <br />
-<div class="about">	
+<div class="content about">	
 <p>
 I am an Electronics Undergraduate at SRM Easwari Engineering College, with a passion for Programming.
 </p>
