--- a/projects/index.html
+++ b/projects/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: "#Projects"
 ---
-<div class="shift-2">
+<div class="shift content">
+  <h1 id="intro"><code>{{ page.title }}</code> </h1><br>
   <h1>Work in Progress!</h1>
  </div>
