--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 layout: default
 title: "#KarthikB"
 ---
-<div class="shift-2">
-	<h1 id="intro">Hello there! </h1><br />
-	<h3>My name is Karthik Balu.
+<div class="shift">
+	<h1 id="intro"><code>< Hello there!> </code> </h1><br />
+	<h3 id="pitch">My name is Karthik Balu.<br>
 	Navigate to know <a class="btn btn-primary" role="button" href="/about/"> <code>< About me ></code></a>
 	<a class="btn btn-primary" role="button" href="/projects"><code>< My Projects ></code></a>
 	<a class="btn btn-primary" role="button" href="/articles/"><code>< My articles ></code></a> and 
-	<a class="btn btn-primary" role="button" href="/travel/"><code>< My travels ></code> </a> !</h3>	
-	<h3>Have a good day!!</h3>
+	<a class="btn btn-primary" role="button" href="/travel/"><code>< My travels ></code> </a> !<br> Have a good day!!</h3>
 </div>
