--- a/travel/index.html
+++ b/travel/index.html
@@ -2,8 +2,8 @@
 layout: default
 title: "#TravelBug"
 ---
-<div class="shift-2">
-  <h1>{{ page.title }}</h1>
+<div class="shift content">
+  <h1 id="intro"><code>{{ page.title }}</code> </h1><br>
   <ul class="list-unstyled">
 
     {% for post in site.posts %}
