New Font,Google Analytics,Blog posts

--- a/_posts/2017-07-02-website-created.html
+++ b/_posts/2017-07-02-website-created.html
@@ -2,6 +2,7 @@
 layout: post
 title: "#KarthikB is online!"
 date: 2017-07-02
+category: projects
 ---
 
   <p>The website is very close to be launched!</p>
