--- a/travel/index.html
+++ b/travel/index.html
@@ -7,7 +7,9 @@ title: "#TravelBug"
   <ul class="list-unstyled">
 
     {% for post in site.posts %}
+    	{% if post.categories contains 'travel' %}
       <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+    	{% endif %}
     {% endfor %}
   </ul>
   </div>
