--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@ title: "#KarthikB"
 	Navigate to know <a class="btn btn-primary" role="button" href="/about/"> <code>< About me ></code></a>
 	<a class="btn btn-primary" role="button" href="/projects"><code>< My Projects ></code></a>
 	<a class="btn btn-primary" role="button" href="/articles/"><code>< My articles ></code></a> and 
-	<a class="btn btn-primary" role="button" href="/travel/"><code>< My travels ></code> </a> !<br> Have a good day!!</h3>
+	<a class="btn btn-primary" role="button" href="/travel/"><code>< My travels ></code> </a><br> Have a good day!</h3>
 </div>
