--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,12 @@ title: "#Projects"
 
     {% for post in site.posts %}
     	{% if post.categories contains 'projects' %}
-      <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+      <li>
+      <div class="row">
+      <div class="col-md-2"><span>{{ post.date | date_to_string }} </span> </div>
+      <div class="col-md-10 text-left"><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></div>
+      </div>
+      </li>
     	{% endif %}
     {% endfor %}
   </ul>
