--- a/_posts/2016-11-07-fantastic-celestial.html
+++ b/_posts/2016-11-07-fantastic-celestial.html
@@ -87,13 +87,15 @@ category: articles
 	</p>
 </ol>
 <p>
+<div class="references">
 
 	References:<br>
 	<ul>
-		<li>http://www.seasky.org/astronomy/astronomy-calendar-2017.html</li>
-		<li>www.earthsky.org</li>
-		<li>www.space.com</li>
-		<li>www.imo.net</li>
+		<li><a href="http://www.seasky.org/astronomy/astronomy-calendar-2017.html">Seasky</a></li>
+		<li><a href="www.earthsky.org">EarthSky</a></li>
+		<li><a href="www.space.com">Space.com</a></li>
+		<li><a href="www.imo.net">IM0</a></li>
 	</ul>
+	</div>
 </p>
 
