--- a/_posts/2016-11-07-fantastic-celestial.html
+++ b/_posts/2016-11-07-fantastic-celestial.html
@@ -92,9 +92,9 @@ category: articles
 	References:<br>
 	<ul>
 		<li><a href="http://www.seasky.org/astronomy/astronomy-calendar-2017.html">Seasky</a></li>
-		<li><a href="www.earthsky.org">EarthSky</a></li>
-		<li><a href="www.space.com">Space.com</a></li>
-		<li><a href="www.imo.net">IM0</a></li>
+		<li><a href="http://www.earthsky.org">EarthSky</a></li>
+		<li><a href="http://www.space.com">Space.com</a></li>
+		<li><a href="http://www.imo.net">IM0</a></li>
 	</ul>
 	</div>
 </p>
