--- a/about/index.html
+++ b/about/index.html
@@ -2,32 +2,28 @@
 layout: default
 title: "#KarthikB"
 ---
-<div class="shift">
-<img src="/static/images/profile.jpg" class="profile img-thumbnail img-circle" />
+<div class="row content">
+<div class="col-12">
+<img src="/static/images/profile.jpg" class="profile" />
+</div>
+<div class="col-12">
 <h2 id="caption">Karthik B</h2>
+</div>
 <br />
-<div class="content about">	
+<div class="col-10 offset-2 about center">	
 <p>
-I am an Electronics Undergraduate at SRM Easwari Engineering College, with a passion for Programming.
+I am an Electronics Undergraduate at SRM Easwari Engineering College, with a passion for Programming. I'm inclined towards working with Embedded Systems, Internet of Things and Application Development. My programming skill-set includes C, C++, Python while my web-development tools include HTML,CSS and Bootstrap Framework. I've also worked with Github Version Control, have debugged with Valgrind and GDB. 
 </p>
-<p >
-I'm inclined towards working with Embedded Systems, Internet of Things and Application Development.
-</p>
-<p >
-My programming skill-set includes C, C++, Python while my web-development tools include HTML,CSS and Bootstrap Framework. I've also worked with Github Version Control, have debugged with Valgrind and GDB. 
-</p>
-<p >
+<p>
 Currently, I'm working on implementation of Machine Learning algorithms and applying them. My further interests include mastering Tensor Flow, working with ROS.
 </p>
 
-<p >
-In my free time, I am an avid reader, traveller/trekker, foodie and social volunteer. 
+<p>
+In my free time, I am an avid reader, traveller/trekker, foodie and social volunteer. My dedication and discipline are my key qualities as is my persistence. I am a team player with proven experience in working as a team to tackle problems in various instances during my education/internships. I always strive to learn new things and keep progressing. I'm an optimist, greatly influenced by Ayn Rand's writing.
 </p>
 
-<p >
-My dedication and discipline are my key qualities as is my persistence. I am a team player with proven experience in working as a team to tackle problems in various instances during my education/internships. I always strive to learn new things and keep progressing. I'm an optimist, greatly influenced by Ayn Rand's writing.
-</p>
-
-<p >Download my resume by clicking &nbsp;<a id="here" href="/static/resume.pdf">here</a></p>
+<p>Download my resume by clicking &nbsp;<a id="here" href="/static/resume.pdf">here</a></p>
 </div>
+
+
 </div>
