--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 layout: default
 title: "#KarthikB"
 ---
-<div class="shift">
-	<h1 id="intro"><code>< Hello there!> </code> </h1><br />
-	<h3 id="pitch">My name is Karthik Balu.<br>
-	Navigate to know <a class="btn btn-primary" role="button" href="/about/"> <code>< About me ></code></a>
-	<a class="btn btn-primary" role="button" href="/projects"><code>< My Projects ></code></a>
-	<a class="btn btn-primary" role="button" href="/articles/"><code>< My articles ></code></a> and 
-	<a class="btn btn-primary" role="button" href="/travel/"><code>< My travels ></code> </a><br> Have a good day!</h3>
+<div class="row content center">
+	<div class="col-12">
+		<h1 class="intro hello"><code><&nbsp;Hello&nbsp;&nbsp; there!&nbsp;> </code> </h1>
+	<h3 id="pitch">
+			My name is Karthik Balu.<br>
+			Navigate to know
+			<a class="btn btn-primary" role="button" href="/about/"> <code>< About me ></code></a>
+			<a class="btn btn-primary" role="button" href="/projects"><code>< My Projects ></code></a>
+			<a class="btn btn-primary" role="button" href="/articles/"><code>< My articles ></code></a> and 
+			<a class="btn btn-primary" role="button" href="/travel/"><code>< My travels ></code> </a><br>
+			Have a good day!<br>
+	</h3>
+	</div>
 </div>
+
