Fix for Hello text, Footer, Updated Articles

--- a/_posts/2016-11-10-cornish-wrestling.html
+++ b/_posts/2016-11-10-cornish-wrestling.html
@@ -1,34 +1,34 @@
 ---
 layout: post
-title: "The Amazing Wrestling Heritage of England that You Shouldn't Miss"
+title: "The Amazing Wrestling Heritage of England You must Experience"
 date: 2016-11-10
 category: articles
 ---
-<p>
+<p class="article text-justify">
 	Two men step onto the circle on the grass field, wearing yellowish jackets.<br>
 
 	They solemnly mutter an oath – the oath they must all say before they begin – <span class="quote">“On my honour and the honour of my country, I swear to wrestle without treachery or brutality and in token of my sincerity I offer my hand to my opponent. In the words of my forefathers, Good play is fair play.”</span><br>
 
 	They look each other in the eyes, shake hands and grapple each other. And then, they begin – wrestling.<br>
 
-	<img src="/static/images/a2i1.png" class="image-center" />
+	<img src="/static/images/a2/i1.png" class="image-center" />
 	<span class="tinycaption">Two men wrestle as Sticklers observe.</span>
 
 	They instead use their wit and grit to grapple each other’s jackets and try and swing it. At last, one of them is swung onto the ground –flat on his back. They shake hands. The game – the ancient Celtic traditional game of Cornish Wrestling – is over.<br>
 
-	<img src="/static/images/a2i2.png" class="image-center" />
+	<img src="/static/images/a2/i2.png" class="image-center" />
 	<span class="tinycaption">Sticklers - mostly retired wrestlers - referee and importantly - carry a walking stick</span>
 
 	The crux of the game is this – two men face each other off on a bed of grass, in a game officiated by three referees with walking sticks or as they are commonly called - “Sticklers”. The winner is the person who throws his opponent flat on his back such that three of his four “pins” are on the ground or wins by points, with 1 point being awarded for each pin of the opponent touching the ground. The Four “Pins” refer to the four extreme ends on the back – the shoulders and the hips. In the case that neither of the players throws the other to the ground, the person who makes the best attempt to do so - is awarded points.<br>
 
 	And No - The bigger man doesn’t always win. The nimble use their feet wisely and fast, entwining it with their opponent’s – tiring their legs until they give away. The game is unique against other martial art games in the aspect that it prohibits brutal moves such as a chokehold, use of arms to counter the opponent below his waist level, using feet above an opponent’s knee level and so forth.<br>
 
-	<img src="/static/images/a2i3.png" class="image-center" />
+	<img src="/static/images/a2/i3.png" class="image-center" />
 	<span class="tinycaption">Women at it – Cornish Ladies Championship– Truro 2016</span>
 
 	Indigenous to Cornwall, England – Cornish Wrestling is a millennia-old game – played unorthodoxly until the last century when formal rules were framed. The game is notorious for the fact that it was used to settle scores between kings in the days of old. Cornish Wrestling Association, formed in 1923, was the first body to frame uniform, regularized rules for this ancient sport. However, due to lack of promotion and funds, this ancient sport looks now at extinction. The CWA organizes training sessions, tournaments and events to promote the sport.<br>
 
-	<img src="/static/images/a2i4.png" class="image-center" />
+	<img src="/static/images/a2/i4.png" class="image-center" />
 	<span class="tinycaption">Ashley Cawley and Richard wrestle for the Heavyweight Championship- Truro 2016</span>
 
 	CWA Social Media Promoter Richard told us that CWA currently has one club to promote Cornish Wrestling – St Columb Major – which meets every Friday from 7 pm to 9pm for training. The Cornish Wrestling Season begins in June and goes on till September. It is riddled with tournaments, sparring demonstrations and training sessions. Richard feels that it would take one season for a complete novice to get to the competitive sportive level.<br>
@@ -47,5 +47,6 @@ category: articles
 	<li><a href="https://www.instagram.com/cornishwrestling/">CWA instagram</a></li>
 	<li><a href="https://twitter.com/CornishWrasslin">CWA Twitter</a></li>
 	<li><a href="https://www.facebook.com/Cornish-Wrestling-311061511976/">CWA Facebook</a></li>
+	<li>Note: All Images are credited to their original takers. I'm merely hosting them here for the article</li>
 	</ol>
 </div>
