--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "#KarthikB"
 ---
 <div class="row content center">
 	<div class="col-12">
-		<h1 class="intro hello"><code><&nbsp;Hello&nbsp;&nbsp; there!&nbsp;> </code> </h1>
+		<h1 class="intro hello"><code>< Hello there! > </code> </h1>
 	<h3 id="pitch">
 			My name is Karthik Balu.<br>
 			Navigate to know
