--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 layout: default
 title: "#KarthikB"
 ---
-<div class="row content center">
+<div class="row justify-content-center  text-center">
 	<div class="col-12">
-		<h1 class="intro hello"><code>< Hello there! > </code> </h1>
+		<h1 class="intro hello center"><code>&lt;Hello there!&gt;</code> </h1>
+	</div>
 	<h3 id="pitch">
-			My name is Karthik Balu.<br>
+		<div class="col-12">
+			My name is Karthik Balu.
+		</div>
+		<div class="col-12">
 			Navigate to know
 			<a class="btn btn-primary" role="button" href="/about/"> <code>< About me ></code></a>
 			<a class="btn btn-primary" role="button" href="/projects"><code>< My Projects ></code></a>
 			<a class="btn btn-primary" role="button" href="/articles/"><code>< My articles ></code></a> and 
 			<a class="btn btn-primary" role="button" href="/travel/"><code>< My travels ></code> </a><br>
+		</div>
+		<div class="col-12">
 			Have a good day!<br>
+		</div>
 	</h3>
-	</div>
 </div>
-
