Fix Bold issue in Project-1

--- a/_posts/2016-09-30-button-to-twitter.html
+++ b/_posts/2016-09-30-button-to-twitter.html
@@ -8,7 +8,7 @@ category: projects
 	<p class="text-justify">
 		I did this project as part of my "documenting applications for Raspberry Pi" work as an Intern for Ensemble Tech. All code/work is not original and based on this <a href="https://docs.google.com/document/d/1e7U_WM1jSo0wgMX5RdpN0eN6p9TWadGYHqWf6yR2JZM/edit">work</a> by Ahmad Khattab. I have learnt the "how- to" from his documentation of Buidling a doorbell and have implemented and documented the small part of tweeting the time. Check it out! 
 	</p>
-	<ul class="list-unstyled outer">
+	<ul class="list-unstyled bold-head">
 		<li>Hardware Requirements</li>
 		<p>
 			<ol>
