--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@ title: "#KarthikB"
 		<div class="col-12">
 			My name is Karthik Balu.
 		</div>
-		<div class="col-12">
-			Navigate to know
-			<a class="btn btn-primary" role="button" href="/about/"> <code>< About me ></code></a>
-			<a class="btn btn-primary" role="button" href="/projects"><code>< My Projects ></code></a>
-			<a class="btn btn-primary" role="button" href="/articles/"><code>< My articles ></code></a> and 
-			<a class="btn btn-primary" role="button" href="/travel/"><code>< My travels ></code> </a><br>
-		</div>
-		<div class="col-12">
-			Have a good day!<br>
+		<div class="row">
+			<div class="col-md-3 col-12 text-right">
+				Navigate to know
+			</div>
+			<div class="col-md-9 col-6 center">
+				<a class="btn btn-primary" role="button" href="/about/"> <code>< About me ></code></a>
+				<a class="btn btn-primary" role="button" href="/projects"><code>< My Projects ></code></a>
+				<a class="btn btn-primary" role="button" href="/articles/"><code>< My articles ></code></a> and 
+				<a class="btn btn-primary" role="button" href="/travel/"><code>< My travels ></code> </a><br>
+			</div>
+			<div class="col-12">
+				Have a good day!<br>
+			</div>
 		</div>
 	</h3>
 </div>
