Adding Can Frame

--- a/_posts/2017-10-19-intro-to-CAN.html
+++ b/_posts/2017-10-19-intro-to-CAN.html
@@ -8,7 +8,7 @@ category: projects
 	<p> SO I started with Visteon some 2 months back and this was an organization that produced automotive cockit electronics- This means the dashboard of your car which displays the vehicle speed, engine speed, fuel level, odometer etc., and also the car infotainment systems. At first I was put into Hyundai panel clusters and then moved to Jaguar Land Rover clusters.</p>
 	<p> And I got sight of a 12 inch full TFT cluster that worked on CAN,LIN and ethernet protocols. </p>
 	<p> Thus started my journey with CAN, a fascinating protocol that is the buzzword around various industries. I knew nothing about it and began to read up. My go-to was the Bosch CAN 2 specification </p>
-	<p> CAN stands for Controller Area Network. It is a serial communication  bas-based protocol, that simulates the datalink layer of the OSI model. It is divided into object,transfer and physical layers based on applications each layer performs.</p>
+	<p> CAN stands for Controller Area Network. It is a serial communication  bus-based protocol, that simulates the datalink layer of the OSI model. It is divided into object,transfer and physical layers based on applications each layer performs.</p>
 	<ul class="list-unstyled bold-head">
 		<li>The Layers of CAN</li>
 		<ul>
