--- a/_posts/2017-10-20-CAN-Frames.html
+++ b/_posts/2017-10-20-CAN-Frames.html
@@ -19,7 +19,7 @@ category: projects
 
 
 		<li>Data Frame</li>
-    <img src="/static/images/projects/p4/i2.png" class="image-center image-bigger" />
+    <img src="/static/images/projects/p4/i2.png" class="image-center image-biggest" />
 		Data Frame has 7 fields.
 		<ul>
 			<li>Start-Of-Frame - dominant bit</li>
